# keyvox

./: .gitignore  BACKENDS.md  CLAUDE.md  LICENSE  README.md  config.toml.example  pyproject.toml  test_icons.py  test_theme.py
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: doctor.mjs  run-tauri.mjs
apps/desktop/src/: App.svelte  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: FirstRunSetup.svelte  backend.ts  protocol.ts  websocket.ts
docs/: desktop-ui.md  testing.md
keyvox/: __main__.py  config.py  config_reload.py  dictionary.py  hardware.py  history.py  hotkey.py  pipeline.py  recorder.py  server.py  setup_wizard.py  storage.py  text_insertion.py  transcriber.py
keyvox/backends/: __init__.py  base.py  faster_whisper.py  qwen_asr.py  qwen_asr_vllm.py
keyvox/ui/: __init__.py  icons.py  transcription_worker.py  tray_icon.py  window_chrome.py
keyvox/ui/styles/: __init__.py  base.qss  tokens.py  utils.py
tasks/: lessons.md
tests/: test_backends_base.py  test_backends_factory.py  test_backends_impl.py  test_config_hot_reload.py  test_config_module.py  test_dictionary.py  test_hardware.py  test_history.py  test_hotkey_runtime.py  test_hotkey_shutdown.py  test_main_entrypoint.py  test_pipeline.py  test_recorder.py  test_server.py  test_setup_wizard.py  test_storage.py  test_text_insertion.py  test_ui_styles.py  test_window_chrome.py
(+6 files in other folders)
