[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "keyvox"
version = "0.1.0"
description = "Push-to-talk speech-to-text powered by Whisper on GPU"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
singleton = ["pywin32>=306"]
gui = ["PySide6>=6.6.0"]

[project.scripts]
keyvox = "keyvox.__main__:main"
