[package]
name = "keyvox_desktop"
version = "0.1.0"
description = "Keyvox professional desktop UI"
authors = ["Keyvox"]
edition = "2021"

[lib]
name = "keyvox_desktop_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "keyvox_desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
